<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:layout_margin="8dp"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <EditText
            android:id="@+id/inUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="username_empty" />


    <EditText
            android:id="@+id/inNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Number"
            android:inputType="number" />

    <EditText
            android:id="@+id/inConfirmNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Number"
            android:inputType="number" />


    <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="LOGIN" />


    <TextView
            android:id="@+id/txtLoginResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Hello Anupam"
            android:gravity="center" />

</LinearLayout>